wip création du formulaire login

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,62 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Formulaire de connexion</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-
-    .container {
-      width: 300px;
-      margin: 200px auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      background-color: #f4f4f4;
-    }
-
-    h2 {
-      text-align: center;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    input[type="text"],
-    input[type="password"] {
-      width: 100%;
-      padding: 7px;
-      margin-bottom: 10px;
-    }
-
-    input[type="submit"] {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-
-    input[type="submit"]:hover {
-      background-color: #45a049;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h2>Connexion</h2>
-{#    <form method="POST" action="{{ path('login_check') }}"> #}
-      <label for="username">Nom d'utilisateur:</label>
-      <input type="text" id="username" name="_username" required>
-
-      <label for="password">Mot de passe:</label>
-      <input type="password" id="password" name="_password" required>
-
-      <input type="submit" value="Se connecter">
-    </form>
-  </div>
-</body>
-</html>
+<h1>Hello World</h1>
