--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -48,6 +48,24 @@
 				padding: 10px;
 				/* Add other styles as needed */
 			}
+			a.register-link {
+  				display: inline-block;
+  				text-align: center;
+  				margin-top: 10px;
+				margin-bottom: 10px;
+  				padding: 10px;
+  				color: #fff;
+  				background-color: #4CAF50;
+  				text-decoration: none;
+  				border: none;
+  				width: 50%;
+  				cursor: pointer;
+  				transition: background-color 0.3s ease;
+			}		
+
+			a.register-link:hover {
+			  background-color: #45a049;
+			}
 		</style>
 	</head>
 	<body>
@@ -55,7 +73,7 @@
 
 			<h2>Connexion</h2>
 
-			<form action="/register" method="POST">
+			<form action="/signIn" method="POST">
 				<label for="username">Nom d'utilisateur:</label>
 				<input type="text" id="username" name="_username" required>
 
@@ -67,6 +85,8 @@
 						{{ error }}
 					</div>
 				{% endif %}
+
+				<a href="/registerPage" class="register-link">Inscription</a>
 
 				<input type="submit" value="Se connecter">
 			</form>
