ajout de la déconnexion + wip opti routes

--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Formulaire d'inscription</title>
+		<title>Formulaire d'Inscription</title>
 		<style>
 			body {
 				font-family: Arial, sans-serif;
@@ -85,10 +85,8 @@
 						{{ error }}
 					</div>
 				{% endif %}
-
-				<a href="/" class="register-link">Se connecter</a>
-
 				<input type="submit" value="S'inscrire">
+				<a href="/" class="register-link">Se connecter</a>
 			</form>
 		</div>
 
