--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -71,7 +71,7 @@
 	<body>
 		<div class="container">
 
-			<h2>Connexion</h2>
+			<h2>Formulaire de Connexion</h2>
 
 			<form action="/signIn" method="POST">
 				<label for="username">Nom d'utilisateur:</label>
@@ -86,9 +86,10 @@
 					</div>
 				{% endif %}
 
+				<input type="submit" value="Se connecter">
+
 				<a href="/registerPage" class="register-link">Inscription</a>
 
-				<input type="submit" value="Se connecter">
 			</form>
 		</div>
 
