last commit on espere

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/testIsAuthWork">Test</a>
+        <a href="/testIsAuthWork">Test des droits/rôles </a>
         <a href="/logout">Déconnexion</a>
     </div>
     <div class="main-content">
